Debugged JsonReader compatibility issues with Java 8